v.1.5.1 Changelog: - fix width and height overlay

--- a/example.html
+++ b/example.html
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="src/newSelect.1.5.js"></script>
+<script type="text/javascript" src="src/newSelect.1.5.min.js"></script>
 
 <select class="select-example">
     <option>Bandung</option>
